After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705674 - aiffparse broken
aiffparse broken
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal critical
: 1.1.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-08 13:56 UTC by Matthieu Bouron
Modified: 2013-08-10 18:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH 1/3] aiffparse: fix buffers initialisation (2.14 KB, patch)
2013-08-08 13:58 UTC, Matthieu Bouron
committed Details | Review
[PATCH 2/3] aiffparse: send start stream event (1.35 KB, patch)
2013-08-08 13:59 UTC, Matthieu Bouron
committed Details | Review
[PATCH 3/3] aiffparse: set missing layout field in srcpad caps (816 bytes, patch)
2013-08-08 13:59 UTC, Matthieu Bouron
committed Details | Review

Description Matthieu Bouron 2013-08-08 13:56:22 UTC
The aiff parser is currently broken (using master branch).

gst-launch-1.0 file:///input.aiff ! aiffparse ! audioconvert ! pulsesink
(gst-launch-1.0:24685): GStreamer-CRITICAL **: gst_pad_pull_range: assertion `*buffer == NULL || GST_IS_BUFFER (*buffer)' failed
ERROR: from element /GstPipeline:pipeline0/GstAiffParse:aiffparse0: Could not demultiplex stream.
Additional debug info:
aiffparse.c(1066): gst_aiff_parse_stream_headers (): /GstPipeline:pipeline0/GstAiffParse:aiffparse0:
Couldn't read in header
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 Matthieu Bouron 2013-08-08 13:58:52 UTC
Created attachment 251182 [details] [review]
[PATCH 1/3] aiffparse: fix buffers initialisation
Comment 2 Matthieu Bouron 2013-08-08 13:59:20 UTC
Created attachment 251183 [details] [review]
[PATCH 2/3] aiffparse: send start stream event
Comment 3 Matthieu Bouron 2013-08-08 13:59:48 UTC
Created attachment 251184 [details] [review]
[PATCH 3/3] aiffparse: set missing layout field in srcpad caps
Comment 4 Tim-Philipp Müller 2013-08-10 18:58:24 UTC
Thanks for the patches! Some other bits needed fixing too for me, with playbin:


commit ed69b2896f3fe86162cc90fd4f8d7d3ebb63fefc
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sat Aug 10 19:44:15 2013 +0100

    aiffparse: fix CAPS query
    
    Was causing criticals in decodebin/playbin because the caps
    query done when exposing pads would return ANY caps.

commit 48734bd522bacadd9692996f3afaea8f41133538
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sat Aug 10 19:43:41 2013 +0100

    aiffparse: don't unref NULL buffer

commit 8c4241e546130675aa5f266bda846a0acb93d652
Author: Matthieu Bouron <matthieu.bouron@collabora.com>
Date:   Wed Aug 7 19:08:33 2013 +0100

    aiffparse: set missing layout field in srcpad caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705674

commit 5a066fd6dd33defab065cf450925e6b3ec74bd80
Author: Matthieu Bouron <matthieu.bouron@collabora.com>
Date:   Wed Aug 7 17:28:29 2013 +0100

    aiffparse: send start stream event
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705674

commit 86edc51333048916098b0497efb5bf6a4c189c6f
Author: Matthieu Bouron <matthieu.bouron@collabora.com>
Date:   Tue Aug 6 16:53:37 2013 +0100

    aiffparse: fix buffers initialisation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705674