aiffparse: fix buffers initialisation

https://bugzilla.gnome.org/show_bug.cgi?id=705674